@startuml

'---Settings---'
class UnityEngine.ScriptableObject
class Settings.Structs.CoalGeneratorSettings
class Settings.Structs.GreenHouseSettings
class Settings.BuildingsSettings

'---Connections---'
UnityEngine.ScriptableObject <|-- Settings.Structs.CoalGeneratorSettings
UnityEngine.ScriptableObject <|-- Settings.Structs.GreenHouseSettings

@enduml